--- a/teacozy.css
+++ b/teacozy.css
@@ -1,5 +1,7 @@
 * {
     background-color: black;
+    font-family: helvetica;
+    opacity: 0.9;
 }
 
 .logo {
@@ -14,20 +16,51 @@
     border-bottom: 1px solid gray;  
 }
 
-.background {
-    height: 700px;
-    width: 1200px;
-    background-image: url(./background.jpeg);
+.backgroundimg {
+    max-height: 700px;
+    max-width: 1200px;
     margin: 0 auto;
+    display: flex;
+    justify-content: space-around;
+    
     
 }
 
-.bgtext {
+.ourmission {
     color: seashell;
-    position: absolute;
-    display: inline;
-    top: 350px;
     width: 1200px;
+    top: 350px;
+    position: absolute;
     text-align: center;
 }
  
+.teaofthemonth {
+    color: seashell;
+    padding: 30px;
+    max-height: 700px;
+    text-align: center;
+
+}
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.image {
+    width: 300px;
+    height: 200px;
+    margin: 20px;
+}
+
+.container-2 {
+    display: flex;
+}
+
+.image2 {
+    width: 300px;
+    height: 200px;
+    margin: 20px;
+}   
